--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "lrm-reactapp",
+  "name": "mfgh.ir",
+  "homepage": "http://mfgh.ir" ,
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gumgum/react-script-tag": "0.0.3",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "jquery": "^3.6.0",
+    "percircle": "^1.0.29",
+    "rc-progress": "^3.1.4",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
